# fsapi-template

./: .envs.example  .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: build_test.yaml
scripts/: __init__.py  init.py  rotate.py  unit.py  unit_file.py
src/fsapi_template/: __init__.py  __main__.py  config.py  test__init__.py  test_config.py
src/fsapi_template/tools/: __init__.py  project_details.py  rotate.py  unit_file.py
